Conectado Registro de salida con frontend